# Opengl-Robot-arm

./: CGTutorial.cpp  CGTutorial.vcxproj  CMakeLists.txt  StandardShading.fragmentshader  Thumbs.db  objects.cpp
Debug/: CGTutorial.ilk
Debug/CGTutorial.tlog/: CGTutorial.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
