cmake_minimum_required(VERSION 3.8)
project(CGTutorial)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Debug/CGTutorial.tlog/CGTutorial.lastbuildstate
        Debug/CGTutorial.tlog/CL.command.1.tlog
        Debug/CGTutorial.tlog/CL.read.1.tlog
        Debug/CGTutorial.tlog/CL.write.1.tlog
        Debug/CGTutorial.tlog/link.command.1.tlog
        Debug/CGTutorial.tlog/link.read.1.tlog
        Debug/CGTutorial.tlog/link.write.1.tlog
        Debug/CGTutorial.exe
        Debug/CGTutorial.ilk
        Debug/CGTutorial.log
        Debug/CGTutorial.obj
        Debug/CGTutorial.pdb
        Debug/objects.obj
        Debug/objloader.obj
        Debug/shader.obj
        Debug/texture.obj
        Debug/vc141.pdb
        external/glew-1.13.0/GL/glew.h
        external/glew-1.13.0/GL/glxew.h
        external/glew-1.13.0/GL/wglew.h
        external/glfw-3.1.2/GLFW/glfw3.h
        external/glfw-3.1.2/GLFW/glfw3native.h
        external/glm-0.9.4.0/glm/core/_detail.hpp
        external/glm-0.9.4.0/glm/core/_fixes.hpp
        external/glm-0.9.4.0/glm/core/_swizzle.hpp
        external/glm-0.9.4.0/glm/core/_swizzle_func.hpp
        external/glm-0.9.4.0/glm/core/_vectorize.hpp
        external/glm-0.9.4.0/glm/core/dummy.cpp
        external/glm-0.9.4.0/glm/core/func_common.hpp
        external/glm-0.9.4.0/glm/core/func_common.inl
        external/glm-0.9.4.0/glm/core/func_exponential.hpp
        external/glm-0.9.4.0/glm/core/func_exponential.inl
        external/glm-0.9.4.0/glm/core/func_geometric.hpp
        external/glm-0.9.4.0/glm/core/func_geometric.inl
        external/glm-0.9.4.0/glm/core/func_integer.hpp
        external/glm-0.9.4.0/glm/core/func_integer.inl
        external/glm-0.9.4.0/glm/core/func_matrix.hpp
        external/glm-0.9.4.0/glm/core/func_matrix.inl
        external/glm-0.9.4.0/glm/core/func_noise.hpp
        external/glm-0.9.4.0/glm/core/func_noise.inl
        external/glm-0.9.4.0/glm/core/func_packing.hpp
        external/glm-0.9.4.0/glm/core/func_packing.inl
        external/glm-0.9.4.0/glm/core/func_trigonometric.hpp
        external/glm-0.9.4.0/glm/core/func_trigonometric.inl
        external/glm-0.9.4.0/glm/core/func_vector_relational.hpp
        external/glm-0.9.4.0/glm/core/func_vector_relational.inl
        external/glm-0.9.4.0/glm/core/hint.hpp
        external/glm-0.9.4.0/glm/core/intrinsic_common.hpp
        external/glm-0.9.4.0/glm/core/intrinsic_common.inl
        external/glm-0.9.4.0/glm/core/intrinsic_exponential.hpp
        external/glm-0.9.4.0/glm/core/intrinsic_exponential.inl
        external/glm-0.9.4.0/glm/core/intrinsic_geometric.hpp
        external/glm-0.9.4.0/glm/core/intrinsic_geometric.inl
        external/glm-0.9.4.0/glm/core/intrinsic_matrix.hpp
        external/glm-0.9.4.0/glm/core/intrinsic_matrix.inl
        external/glm-0.9.4.0/glm/core/intrinsic_trigonometric.hpp
        external/glm-0.9.4.0/glm/core/intrinsic_trigonometric.inl
        external/glm-0.9.4.0/glm/core/intrinsic_vector_relational.hpp
        external/glm-0.9.4.0/glm/core/intrinsic_vector_relational.inl
        external/glm-0.9.4.0/glm/core/setup.hpp
        external/glm-0.9.4.0/glm/core/type.hpp
        external/glm-0.9.4.0/glm/core/type_float.hpp
        external/glm-0.9.4.0/glm/core/type_gentype.hpp
        external/glm-0.9.4.0/glm/core/type_gentype.inl
        external/glm-0.9.4.0/glm/core/type_half.hpp
        external/glm-0.9.4.0/glm/core/type_half.inl
        external/glm-0.9.4.0/glm/core/type_int.hpp
        external/glm-0.9.4.0/glm/core/type_mat.hpp
        external/glm-0.9.4.0/glm/core/type_mat.inl
        external/glm-0.9.4.0/glm/core/type_mat2x2.hpp
        external/glm-0.9.4.0/glm/core/type_mat2x2.inl
        external/glm-0.9.4.0/glm/core/type_mat2x3.hpp
        external/glm-0.9.4.0/glm/core/type_mat2x3.inl
        external/glm-0.9.4.0/glm/core/type_mat2x4.hpp
        external/glm-0.9.4.0/glm/core/type_mat2x4.inl
        external/glm-0.9.4.0/glm/core/type_mat3x2.hpp
        external/glm-0.9.4.0/glm/core/type_mat3x2.inl
        external/glm-0.9.4.0/glm/core/type_mat3x3.hpp
        external/glm-0.9.4.0/glm/core/type_mat3x3.inl
        external/glm-0.9.4.0/glm/core/type_mat3x4.hpp
        external/glm-0.9.4.0/glm/core/type_mat3x4.inl
        external/glm-0.9.4.0/glm/core/type_mat4x2.hpp
        external/glm-0.9.4.0/glm/core/type_mat4x2.inl
        external/glm-0.9.4.0/glm/core/type_mat4x3.hpp
        external/glm-0.9.4.0/glm/core/type_mat4x3.inl
        external/glm-0.9.4.0/glm/core/type_mat4x4.hpp
        external/glm-0.9.4.0/glm/core/type_mat4x4.inl
        external/glm-0.9.4.0/glm/core/type_size.hpp
        external/glm-0.9.4.0/glm/core/type_vec.hpp
        external/glm-0.9.4.0/glm/core/type_vec.inl
        external/glm-0.9.4.0/glm/core/type_vec1.hpp
        external/glm-0.9.4.0/glm/core/type_vec1.inl
        external/glm-0.9.4.0/glm/core/type_vec2.hpp
        external/glm-0.9.4.0/glm/core/type_vec2.inl
        external/glm-0.9.4.0/glm/core/type_vec3.hpp
        external/glm-0.9.4.0/glm/core/type_vec3.inl
        external/glm-0.9.4.0/glm/core/type_vec4.hpp
        external/glm-0.9.4.0/glm/core/type_vec4.inl
        external/glm-0.9.4.0/glm/gtc/constants.hpp
        external/glm-0.9.4.0/glm/gtc/constants.inl
        external/glm-0.9.4.0/glm/gtc/epsilon.hpp
        external/glm-0.9.4.0/glm/gtc/epsilon.inl
        external/glm-0.9.4.0/glm/gtc/half_float.hpp
        external/glm-0.9.4.0/glm/gtc/half_float.inl
        external/glm-0.9.4.0/glm/gtc/matrix_access.hpp
        external/glm-0.9.4.0/glm/gtc/matrix_access.inl
        external/glm-0.9.4.0/glm/gtc/matrix_integer.hpp
        external/glm-0.9.4.0/glm/gtc/matrix_inverse.hpp
        external/glm-0.9.4.0/glm/gtc/matrix_inverse.inl
        external/glm-0.9.4.0/glm/gtc/matrix_transform.hpp
        external/glm-0.9.4.0/glm/gtc/matrix_transform.inl
        external/glm-0.9.4.0/glm/gtc/noise.hpp
        external/glm-0.9.4.0/glm/gtc/noise.inl
        external/glm-0.9.4.0/glm/gtc/quaternion.hpp
        external/glm-0.9.4.0/glm/gtc/quaternion.inl
        external/glm-0.9.4.0/glm/gtc/random.hpp
        external/glm-0.9.4.0/glm/gtc/random.inl
        external/glm-0.9.4.0/glm/gtc/reciprocal.hpp
        external/glm-0.9.4.0/glm/gtc/reciprocal.inl
        external/glm-0.9.4.0/glm/gtc/swizzle.hpp
        external/glm-0.9.4.0/glm/gtc/swizzle.inl
        external/glm-0.9.4.0/glm/gtc/type_precision.hpp
        external/glm-0.9.4.0/glm/gtc/type_precision.inl
        external/glm-0.9.4.0/glm/gtc/type_ptr.hpp
        external/glm-0.9.4.0/glm/gtc/type_ptr.inl
        external/glm-0.9.4.0/glm/gtc/ulp.hpp
        external/glm-0.9.4.0/glm/gtc/ulp.inl
        external/glm-0.9.4.0/glm/ext.hpp
        external/glm-0.9.4.0/glm/glm.hpp
        external/src/glew-1.13.0.zip
        external/src/glfw-3.1.2.zip
        external/glew32.dll
        external/glew32.exp
        external/glew32.lib
        external/glew32d.dll
        external/glew32d.exp
        external/glew32d.lib
        external/glew32s.lib
        external/glew32sd.lib
        external/glewinfo.exe
        external/glfw3.lib
        external/glfw3d.lib
        external/visualinfo.exe
        CGTutorial.cpp
        CGTutorial.sln
        CGTutorial.suo
        CGTutorial.vcxproj
        CGTutorial.vcxproj.user
        ColorFragmentShader.fragmentshader
        cube.obj
        dragon.obj
        mandrill.bmp
        objects.cpp
        objects.hpp
        objloader.cpp
        objloader.hpp
        shader.cpp
        shader.hpp
        StandardShading.fragmentshader
        StandardShading.vertexshader
        teapot.obj
        texture.cpp
        texture.hpp
        Thumbs.db
        TransformVertexShader.vertexshader
        Uebung5.txt
        Uebung6.txt
        Uebung7.txt
        Uebung8.txt)

add_executable(CGTutorial ${SOURCE_FILES})